@@ -1,3 +1,12 @@
+2005-07-19  Dan Winship  <danw@novell.com>
+
+	* generator/Parameters.cs: Remove the AllowComplexRefs flag.
+	(They're always allowed now.)
+
+	* generator/Signal.cs (GenVirtualMethod): Fix up the use of CSType
+	vs MarshalType in the ref/out-handling code so that this can
+	marshal any type.
+
 2005-07-18  Dan Winship  <danw@novell.com>
 
 	* parser/gapi2xml.pl: Change a few instances of
